update documentation and ipynb

--- a/smash.ipynb
+++ b/smash.ipynb
@@ -23,7 +23,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Classification of Player Characters in Super Smash Bros. Melee"
+        "# Classification of Characters in Super Smash Bros. Melee"
       ]
     },
     {
@@ -143,7 +143,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Training Data"
+        "### Review the Data"
       ]
     },
     {
@@ -151,9 +151,8 @@
       "metadata": {},
       "source": [
         "First, let’s have a look at the images used to train the CNN",
-        ".  Over 100,000 images were used, so we’ll draw a random sam",
-        "ple and use [Matplotlib](https://matplotlib.org/) to display",
-        " them."
+        ".  Over 100,000 images were used, so this is just a random s",
+        "ample."
       ]
     },
     {
@@ -254,18 +253,13 @@
       "metadata": {},
       "source": [
         "These images were all captured from scripted gameplay.  The ",
-        "[Data Generation](smash.org) section includes technical deta",
-        "ils on the capturing process."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Let’s compare these images against the images used in the Im",
-        "ageNet competition to train VGG16.  E.g. [these images from ",
-        "the persian cat category](http://imagenet.stanford.edu/synse",
-        "t?wnid=n02123394)."
+        "Data Generation section includes technical details on the ca",
+        "pturing process.  \n",
+        "  \n",
+        "Compare these images against the images used in the ImageNet",
+        " competition to train VGG16.  E.g. [these images from the pe",
+        "rsian cat category](http://imagenet.stanford.edu/synset?wnid",
+        "=n02123394)."
       ]
     },
     {
@@ -276,13 +270,8 @@
         "as character bounding boxes or pose annotation points, we ca",
         "nnot easily compute rich statistics about the images.  Howev",
         "er, visual inspection suggests the following differences to ",
-        "me:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "me:  \n",
+        "  \n",
         "- **Size within frame**\n",
         "  - Characters in captured images rarely fill more than 10% ",
         "of the frame\n",
@@ -302,13 +291,8 @@
         "t of the character\n",
         "  - ImageNet images are comparatively well composed, placing",
         " the object in the front of the frame and fairly close to th",
-        "e center"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "e center  \n",
+        "  \n",
         "Despite these differences, VGG16 is able to extract useful f",
         "eatures that lead to accurate image classification.  This is",
         " the power of award-winning neural networks and transfer lea",
@@ -319,7 +303,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Feature Extraction"
+        "### Extract Features"
       ]
     },
     {
@@ -633,7 +617,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Build and train the network"
+        "### Train the Network"
       ]
     },
     {
@@ -717,57 +701,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "____________________________________________________________",
-            "_____\n",
-            "Layer (type)                 Output Shape              Param",
-            " #   \n",
-            "============================================================",
-            "=====\n",
-            "flatten_3 (Flatten)          (None, 138240)            0    ",
-            "     \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dense_9 (Dense)              (None, 512)               70779",
-            "392  \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dropout_7 (Dropout)          (None, 512)               0    ",
-            "     \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dense_10 (Dense)             (None, 512)               26265",
-            "6    \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dropout_8 (Dropout)          (None, 512)               0    ",
-            "     \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dense_11 (Dense)             (None, 512)               26265",
-            "6    \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dropout_9 (Dropout)          (None, 512)               0    ",
-            "     \n",
-            "____________________________________________________________",
-            "_____\n",
-            "dense_12 (Dense)             (None, 8)                 4104 ",
-            "     \n",
-            "============================================================",
-            "=====\n",
-            "Total params: 71,308,808\n",
-            "Trainable params: 71,308,808\n",
-            "Non-trainable params: 0\n",
-            "____________________________________________________________",
-            "_____\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "template_model = build_model(train_data.shape[1:], hidden_wi",
         "dth=512, hidden_depth=3, dropout_rate=0.2)\n",
@@ -806,9 +740,9 @@
       "source": [
         "Due to a bug in Keras, we cannot directly save the weights a",
         "nd structure of a model compiled for multiple GPUs.  However",
-        ", the multi-GPU model object shares both structure **and** w",
-        "eights with the template model object, which we can save to ",
-        "disk."
+        ", the multi-GPU model object shares both structure and weigh",
+        "ts with the template model object, which we can save to disk",
+        "."
       ]
     },
     {
@@ -845,7 +779,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Test the network"
+        "### Test the Network"
       ]
     },
     {
@@ -854,9 +788,9 @@
       "source": [
         "To compare true classification labels with the predictions o",
         "ur model emits, we’ll need to iterate twice over our test im",
-        "ages in deterministic order again.  One pass will run the im",
-        "ages through the model to produce predicted labels, and the ",
-        "other will collect the true labels for the images."
+        "ages in deterministic order.  One pass will run the images t",
+        "hrough the model to produce predicted labels, and the other ",
+        "will collect the true labels for the images."
       ]
     },
     {
@@ -960,8 +894,8 @@
       "metadata": {},
       "source": [
         "By default our class labels are encoded as integers, but we ",
-        "can actually find the actual class names as taken from the f",
-        "older hierarchy if we know where to look."
+        "can find the actual class names as taken from the folder hie",
+        "rarchy if we know where to look."
       ]
     },
     {
@@ -978,7 +912,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we can visualize our accuracy!  "
+        "Now we can visualize our accuracy!"
       ]
     },
     {
@@ -989,11 +923,281 @@
       "source": [
         "plot_confusion_matrix(c_matrix, class_names, normalize=True)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Appendix - Data Generation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "For interested parties, the following describes the code to ",
+        "generate the custom images.  Not all the code will be covere",
+        "d, in particular I assume the reader is familiar with [GNU M",
+        "ake](https://www.gnu.org/software/make/manual/make.html) and",
+        " can read the [Makefile](Makefile) included in this reposito",
+        "ry."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The images were generated with the [Dolphin emulator](https:",
+        "//dolphin-emu.org/) and [ffmpeg](https://www.ffmpeg.org/) on",
+        " an early 2014 Macbook Air with a stock Intel HD Graphics 50",
+        "00 graphics card."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Install Dolphin"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Dolphin 5.0 or higher is required.  You can [download](https",
+        "://dolphin-emu.org/download/) and install the software from ",
+        "the Dolphin website, or follow the [Dolphin wiki directions]",
+        "(https://wiki.dolphin-emu.org/index.php?title=Installing_Dol",
+        "phin) to install Dolphin via the package manager of your cho",
+        "ice."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Before you can generate images with Dolphin you’ll need to p",
+        "lace a copy of the Super Smash Bros. Melee v1.02 ISO in the ",
+        "[scripts/record_avi directory](scripts/record_avi/).  It is ",
+        "my understanding that possession of a digital copy of this I",
+        "SO file does not violate copyright law provided you also own",
+        " a physical copy of the disc, however I am not a lawyer.  I ",
+        "do not recommend breaking the law in order to recreate this ",
+        "analysis."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Before you run any image generation code you will also need ",
+        "to configure Dolphin for automation:  \n",
+        "  \n",
+        "- **Pause at the end of recording**\n",
+        "  - Ensure “Pause at End of Movie” under the “Movie” menu is",
+        " checked.\n",
+        "- **Don’t prompt for confirmation before closing Dolphin**\n",
+        "  - Select “Configure…” under the “Dolphin” menu.\n",
+        "  - Ensure “Confirm on Stop” under the “Interface” tab is un",
+        "checked.\n",
+        "- **Enable Melee Debug Menu**\n",
+        "  - Select “Configure…” under the “Dolphin” menu.\n",
+        "  - Ensure “Enable Cheats” under the “General” tab is checke",
+        "d.\n",
+        "  - Click the “OK” button.\n",
+        "  - Open the Melee ISO and select “Cheat Manager” under the ",
+        "“Tools” menu.\n",
+        "  - Ensure “Debug Menu” under the “AR Codes” tab is checked.",
+        "\n",
+        "  - Click the “Apply” button.  \n",
+        "  \n",
+        "Once you have configured Dolphin, close the program.  Find y",
+        "our default user directory and copy it into the `scripts/rec",
+        "ord_avi` directory.  Rename the copied directory to `dolphin",
+        "_user` if it is not already so named."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Make Images and Masks"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "From the command line execute `make` with no arguments to se",
+        "e a detailed usage message, including the documentation of c",
+        "onfiguration variables."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The images for this analysis were generated with the followi",
+        "ng commands:  \n",
+        "  \n",
+        "`$ make dirs`  \n",
+        "`$ make images`  \n",
+        "`$ make hist`  \n",
+        "`$ make masks`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Note that proper mask generation requires recording a mask v",
+        "ideo that is frame-for-frame synchronized with a correspondi",
+        "ng image video, and thus Dolphin must run at the same CPU sp",
+        "eed during both image and mask video recording.  For this re",
+        "ason I recorded all videos on my laptop, as I could not forc",
+        "e EC2 instances to run at any constant speed."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Appendix - Data Preprocessing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The following describes the code to preprocess previously ge",
+        "nerated images for keras modeling.  As with the data generat",
+        "ion documentation, not all code will be covered."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Image preprocessing and keras modeling took place on an [EC2",
+        " P2](https://aws.amazon.com/ec2/instance-types/p2/) instance",
+        "."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Set up AWS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Initialize an instance running the [Deep Learning Base AMI (",
+        "Ubuntu)](https://aws.amazon.com/marketplace/pp/B077GCZ4GR). ",
+        " I used Ubuntu 16.04 LTS and Python 3 for my data processing",
+        ".  All required packages are listed in the [ubuntu-packages.",
+        "txt](ubuntu-packages.txt) and [requirements.txt](requirement",
+        "s.txt) files."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "To get ready for data processing, clone this repository onto",
+        " your instance and execute the following commands from the c",
+        "loned directory.  \n",
+        "  \n",
+        "`$ sudo add-apt-repository ppa:dolphin-emu/ppa -y`  \n",
+        "`$ sudo apt update`  \n",
+        "`$ xargs -a ubuntu-packages.txt sudo apt install -y`  \n",
+        "`$ pip3 install -r requirements.txt --user`  \n",
+        "`$ touch scripts/record_avi/Super_Smash_Bros._Melee_\\(v1.02\\",
+        ").iso`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "I wish I could provide a docker instance for the complete se",
+        "tup, however the final setup must have access to the machine",
+        " GPU and I have been unable to find a GPU-capable deep learn",
+        "ing docker setup that does not require more effort than the ",
+        "simple commands above."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Note that you must create a fake ISO with `touch`.  The Make",
+        "file rules expect a file with this name, however as long as ",
+        "you are not doing any video recording you don’t need an actu",
+        "al copy of the real ISO."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Split Data into Train/Test/Valid"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "From the cloned repository directory, run `make dirs` to set",
+        " up the necessary data directory structure."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "If you generated image and mask data according to the docume",
+        "ntation above, copy all images into the `data/images` subfol",
+        "der and copy all masks into the `data/masks` subfolder.  \n",
+        "  \n",
+        "If, instead of generating image and mask data, you would lik",
+        "e to download what was used in this analysis, execute the fo",
+        "llowing commands from the cloned repository directory.  \n",
+        "  \n",
+        "`$ curl -O https://s3.amazonaws.com/datasci-smash/jpg-data.t",
+        "ar.gz`  \n",
+        "`$ tar -xzf jpg-data.tar.gz`  \n",
+        "`$ find data -name '*jpg' -execdir touch '{}' +`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Note that you must `touch` all the downloaded image and mask",
+        " data to let Make know that the images are up-to-date and do",
+        " not need to be refreshed by video recording."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Finally, run `make keras` to create shuffled train/test/vali",
+        "d image data in the `keras/train`, `keras/test`, and `keras/",
+        "valid` folders.  \n",
+        "  \n",
+        "You may set the Make variables `KERAS_RAND_SEED`, `KERAS_TRA",
+        "IN_PCT`, `KERAS_TEST_PCT`, and `KERAS_VALID_PCT` to control ",
+        "the shuffling and splitting steps."
+      ]
     }
   ],
   "metadata": {
     "git": {
-      "suppress_output": true
+      "suppress_outputs": true
     }
   },
   "nbformat": 4,
