--- a/smash.org
+++ b/smash.org
@@ -2864,7 +2864,7 @@ Want to try including stadium, and see if that fucks anything up?
 Sho didn’t!  If anything, that just made it better (25% more data!)
 
 ** Classification Task Writeup
-#+METADATA: (("git" ("suppress_output" . t)))
+#+METADATA: (("git" ("suppress_outputs" . t)))
 
 Note: *I am a data scientist in the Bay Area!  Feel free to contact me with questions, concerns, offers for work ;)*
 
@@ -2872,7 +2872,7 @@ Note: *I am a data scientist in the Bay Area!  Feel free to contact me with ques
 - [[https://www.linkedin.com/in/trevor-murphy-49ba1421][LinkedIn]]
 - [[https://github.com/tmurph][GitHub]]
 
-*** Classification of Player Characters in Super Smash Bros. Melee
+*** Classification of Characters in Super Smash Bros. Melee
 
 This notebook contains the code and resources to recognize the most common player avatars (hereafter, characters) used by professional players of the competitive fighting game Super Smash Bros. Melee.
 
@@ -2898,80 +2898,84 @@ The last step in transfer learning is called “fine-tuning” and involves retr
 
 **** Transfer Learning Code
 
-***** Training Data
-First, let’s have a look at the images used to train the CNN.  Over 100,000 images were used, so we’ll draw a random sample and use [[https://matplotlib.org/][Matplotlib]] to display them.
+***** Review the Data
+First, let’s have a look at the images used to train the CNN.  Over 100,000 images were used, so this is just a random sample.
 
 #+BEGIN_SRC jupyter
-%matplotlib inline
-import matplotlib
-import matplotlib.pyplot as plt
-plt.rcParams['figure.figsize'] = [16, 12]
+    %matplotlib inline
+    import matplotlib
+    import matplotlib.pyplot as plt
+    plt.rcParams['figure.figsize'] = [16, 12]
 
-import numpy as np
+    import numpy as np
 #+END_SRC
 
 #+BEGIN_SRC jupyter
-import os
-import re
+    import os
+    import re
 
-DATA_DIR = "data/keras"
+    DATA_DIR = "data/keras"
 
-all_images = []
-for root, dirs, files in os.walk(os.path.join(DATA_DIR, 'train', 'images')):
-    all_images.extend(files)
+    all_images = []
+    for root, dirs, files in os.walk(os.path.join(DATA_DIR, 'train', 'images')):
+        all_images.extend(files)
 
-img_re = re.compile('(?:[^/]*/)*'
-                    '(?P<character>[^_]*)_'
-                    '(?P<color>[^_]*)_'
-                    '(?P<stage>[^_]*)_'
-                    '(?P<orientation>[^_]*)_'
-                    'bg_on_'
-                    '(?P<img_number>[0-9]{3})'
-                    '.jpg')
+    img_re = re.compile('(?:[^/]*/)*'
+                        '(?P<character>[^_]*)_'
+                        '(?P<color>[^_]*)_'
+                        '(?P<stage>[^_]*)_'
+                        '(?P<orientation>[^_]*)_'
+                        'bg_on_'
+                        '(?P<img_number>[0-9]{3})'
+                        '.jpg')
 
-def get_image(character, color, stage, orientation, img_number):
-    image = os.path.join(DATA_DIR, 'train', 'images', character,
-                         '{character}_{color}_{stage}_{orientation}_bg_on_{img_number}.jpg'.format(character=character,
-                                                                                                   color=color,
-                                                                                                   stage=stage,
-                                                                                                   orientation=orientation,
-                                                                                                   img_number=img_number))
+    def get_image(character, color, stage, orientation, img_number):
+        image = os.path.join(DATA_DIR, 'train', 'images', character,
+                             '{character}_{color}_{stage}_{orientation}_bg_on_{img_number}.jpg'.format(character=character,
+                                                                                                       color=color,
+                                                                                                       stage=stage,
+                                                                                                       orientation=orientation,
+                                                                                                       img_number=img_number))
 
-    rgb_image = plt.imread(image)
+        rgb_image = plt.imread(image)
 
-    return rgb_image
+        return rgb_image
 
-def get_image_by_name(name):
-    image_groups = re.search(img_re, name)
-    return get_image(**image_groups.groupdict())
+    def get_image_by_name(name):
+        image_groups = re.search(img_re, name)
+        return get_image(**image_groups.groupdict())
 
-IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, IMAGE_DEPTH = get_image_by_name(all_images[0]).shape
+    IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, IMAGE_DEPTH = get_image_by_name(all_images[0]).shape
 #+END_SRC
 
 # don’t evaluate this code anymore, since we’ve saved a non-random final version
-#+BEGIN_SRC jupyter
-import random
+#+NAME: character_plots
+#+BEGIN_SRC jupyter :results file :eval never
+    import random
 
-NUM_ROWS = 4
-NUM_COLS = 4
+    NUM_ROWS = 4
+    NUM_COLS = 4
 
-fig, axarr = plt.subplots(NUM_ROWS, NUM_COLS, sharex=True, sharey=True, squeeze=False)
+    fig, axarr = plt.subplots(NUM_ROWS, NUM_COLS, sharex=True, sharey=True, squeeze=False)
 
-for i, image_name in enumerate(random.sample(all_images, NUM_ROWS * NUM_COLS)):
-    ax = axarr[divmod(i, NUM_COLS)]
-    ax.tick_params(axis='both', which='both', bottom='off', top='off', labelbottom='off', right='off', left='off', labelleft='off')
-    ax.imshow(get_image_by_name(image_name))
+    for i, image_name in enumerate(random.sample(all_images, NUM_ROWS * NUM_COLS)):
+        ax = axarr[divmod(i, NUM_COLS)]
+        ax.tick_params(axis='both', which='both', bottom='off', top='off', labelbottom='off', right='off', left='off', labelleft='off')
+        ax.imshow(get_image_by_name(image_name))
 
-fig.tight_layout()
+    fig.tight_layout()
 #+END_SRC
 
 #+ATTR_ORG: :width 600
+#+RESULTS: character_plots
+[[file:jupyter_images/character_plots.png]]
 
-These images were all captured from scripted gameplay.  The [[file:smash.org::*Data%20Generation][Data Generation]] section includes technical details on the capturing process.
+These images were all captured from scripted gameplay.  The [[#BA2C6694-B88E-431B-905B-CC13917C214A][Data Generation]] section includes technical details on the capturing process.\\
+\\
+Compare these images against the images used in the ImageNet competition to train VGG16.  E.g. [[http://imagenet.stanford.edu/synset?wnid=n02123394][these images from the persian cat category]].
 
-Let’s compare these images against the images used in the ImageNet competition to train VGG16.  E.g. [[http://imagenet.stanford.edu/synset?wnid=n02123394][these images from the persian cat category]].
-
-Without additional metadata about the captured images, such as character bounding boxes or pose annotation points, we cannot easily compute rich statistics about the images.  However, visual inspection suggests the following differences to me:
+Without additional metadata about the captured images, such as character bounding boxes or pose annotation points, we cannot easily compute rich statistics about the images.  However, visual inspection suggests the following differences to me:\\
+\\
 - Size within frame ::
   - Characters in captured images rarely fill more than 10% of the frame
   - Objects in ImageNet images often fill 25% or more of the frame
@@ -2981,11 +2985,11 @@ Without additional metadata about the captured images, such as character boundin
 - Composition within frame ::
   - Captured images frequently include visual effects like smoke and explosions, which can occlude parts of the characters
   - In the video game characters frequently fall off the side of the frame, resulting in capture images that cut off part of the character
-  - ImageNet images are comparatively well composed, placing the object in the front of the frame and fairly close to the center
-  
+  - ImageNet images are comparatively well composed, placing the object in the front of the frame and fairly close to the center\\
+\\
 Despite these differences, VGG16 is able to extract useful features that lead to accurate image classification.  This is the power of award-winning neural networks and transfer learning.
 
-***** Feature Extraction
+***** Extract Features
 Running image data through VGG16 is computationally expensive, so we would like to do it just once and cache the results for the later fine-tuning work.  These results are typically thought of as “important features” that have been “extracted” from the image data, realized as a very large floating point array.\\
 \\
 This caching technique trades off increased memory requirements against decreased computational time.  Fortunately, memory is cheap relative to GPU compute, so this trade off makes sense for our problem.
@@ -2995,35 +2999,35 @@ The following code blocks set up the VGG model.\\
 We want to take advantage of the GPUs available to us, which we can do with the function =keras.utils.multi_gpu_model=.  This function accepts a template model (typically compiled for a CPU-only architecture) and creates an identical model compiled for a multi-GPU architecture.
 
 #+BEGIN_SRC jupyter
-import tensorflow as tf
-from keras.applications.vgg16 import VGG16
-from keras.utils import multi_gpu_model
-from keras.models import clone_model
-from GPUtil import getGPUs
+    import tensorflow as tf
+    from keras.applications.vgg16 import VGG16
+    from keras.utils import multi_gpu_model
+    from keras.models import clone_model
+    from GPUtil import getGPUs
 
-try:
-    NUM_GPU = len(getGPUs())
-except:
-    NUM_GPU = 0
+    try:
+        NUM_GPU = len(getGPUs())
+    except:
+        NUM_GPU = 0
 
-def gpuify_model_maybe(model):
-    result = None
-    if NUM_GPU >= 2:
-        result = multi_gpu_model(model, gpus=NUM_GPU)
-    elif NUM_GPU == 1:
-        with tf.device("/gpu:0"):
-            result = clone_model(model)
-    else:
-        result = model
-    return result
+    def gpuify_model_maybe(model):
+        result = None
+        if NUM_GPU >= 2:
+            result = multi_gpu_model(model, gpus=NUM_GPU)
+        elif NUM_GPU == 1:
+            with tf.device("/gpu:0"):
+                result = clone_model(model)
+        else:
+            result = model
+        return result
 #+END_SRC
 
 #+RESULTS:
 
 #+BEGIN_SRC jupyter
-with tf.device("/cpu:0"):
-    template_vgg_model = VGG16(include_top=False, weights="imagenet", input_shape=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, IMAGE_DEPTH))
-gpu_vgg_model = gpuify_model_maybe(template_vgg_model)
+    with tf.device("/cpu:0"):
+        template_vgg_model = VGG16(include_top=False, weights="imagenet", input_shape=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, IMAGE_DEPTH))
+    gpu_vgg_model = gpuify_model_maybe(template_vgg_model)
 #+END_SRC
 
 #+RESULTS:
@@ -3033,31 +3037,31 @@ The following code blocks set up the data flow into the model.\\
 As with most transfer learning work, we must preprocess our images to match key statistical features of the original data set.  The function =keras.applications.imagenet_utils.preprocess_input= does just this.
 
 #+BEGIN_SRC jupyter
-from keras.preprocessing.image import ImageDataGenerator
-from keras.applications.imagenet_utils import preprocess_input
+    from keras.preprocessing.image import ImageDataGenerator
+    from keras.applications.imagenet_utils import preprocess_input
 
-BATCH_SIZE = 16 * max(NUM_GPU, 1)
+    BATCH_SIZE = 16 * max(NUM_GPU, 1)
 
-def make_generator(folder="train",
-                   data_gen_args={"fill_mode": "constant",
-                                  "cval": 0,
-                                  "width_shift_range": 0.05,
-                                  "height_shift_range": 0.05,
-                                  "zoom_range": 0.1,
-                                  "horizontal_flip": True,
-                                  "preprocessing_function": preprocess_input},
-                   data_flow_args={"seed": 1,
-                                   "batch_size": BATCH_SIZE}):
+    def make_generator(folder="train",
+                       data_gen_args={"fill_mode": "constant",
+                                      "cval": 0,
+                                      "width_shift_range": 0.05,
+                                      "height_shift_range": 0.05,
+                                      "zoom_range": 0.1,
+                                      "horizontal_flip": True,
+                                      "preprocessing_function": preprocess_input},
+                       data_flow_args={"seed": 1,
+                                       "batch_size": BATCH_SIZE}):
 
-    image_datagen = ImageDataGenerator(**data_gen_args)
+        image_datagen = ImageDataGenerator(**data_gen_args)
 
-    image_generator = image_datagen.flow_from_directory(
-        directory=os.path.join(DATA_DIR, folder, "images"),
-        target_size=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE),
-        color_mode='rgb',
-        ,**data_flow_args)
+        image_generator = image_datagen.flow_from_directory(
+            directory=os.path.join(DATA_DIR, folder, "images"),
+            target_size=(IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE),
+            color_mode='rgb',
+            ,**data_flow_args)
 
-    return image_generator
+        return image_generator
 #+END_SRC
 
 Due to the design of the Keras library, we can’t easily extract features from our images and simultaneously retain the image labels.  To work around this, we’re going to iterate over our images twice, in the same deterministic order both times, pulling out features one time and labels the other.
@@ -3065,115 +3069,115 @@ Due to the design of the Keras library, we can’t easily extract features from 
 For feature extraction, we will use the =model.predict_generator= API that requires a generator that emits solely arrays of images (as opposed to pairs like =(image_array, label_array)=).  To get this required generator we use =class_mode: None= and =shuffle: False=.
 
 #+BEGIN_SRC jupyter
-image_generator_train = make_generator("train", data_gen_args={"preprocessing_function": preprocess_input},
-                                       data_flow_args={"batch_size": BATCH_SIZE, "class_mode": None, "shuffle": False})
+    image_generator_train = make_generator("train", data_gen_args={"preprocessing_function": preprocess_input},
+                                           data_flow_args={"batch_size": BATCH_SIZE, "class_mode": None, "shuffle": False})
 #+END_SRC
 
 For label extraction, we will use =shuffle: False= again to iterate in the same order as above, but we fall back to the default =class_mode= in order to retain the labels.=
 
 #+BEGIN_SRC jupyter
-label_generator_train = make_generator("train", data_gen_args={}, data_flow_args={"batch_size": BATCH_SIZE, "shuffle": False})
+    label_generator_train = make_generator("train", data_gen_args={}, data_flow_args={"batch_size": BATCH_SIZE, "shuffle": False})
 #+END_SRC
 
 After we define some helper functions, we’ll finally be ready to extract our two arrays.
 
 #+BEGIN_SRC jupyter
-  def count_images(folder="train"):
-      image_directory = os.path.join(DATA_DIR, folder, "images")
-      data_size = 0
+    def count_images(folder="train"):
+        image_directory = os.path.join(DATA_DIR, folder, "images")
+        data_size = 0
 
-      for char_name in os.listdir(image_directory):
-          char_directory = os.path.join(image_directory, char_name)
-          data_size += len(os.listdir(char_directory))
+        for char_name in os.listdir(image_directory):
+            char_directory = os.path.join(image_directory, char_name)
+            data_size += len(os.listdir(char_directory))
 
-      return data_size
+        return data_size
 
-  def truncate_generator(gen, limit=None):
-      if limit is None:
-          return
+    def truncate_generator(gen, limit=None):
+        if limit is None:
+            return
 
-      for i, elt in enumerate(gen):
-          if i < limit:
-              yield elt
-          else:
-              break
+        for i, elt in enumerate(gen):
+            if i < limit:
+                yield elt
+            else:
+                break
 #+END_SRC
 
 Note that the following code can take a significant amount of time to run.
 
 #+BEGIN_SRC jupyter
-image_count_train = count_images("train")
-image_count_train_generator_cutoff = image_count_train / BATCH_SIZE + 1
+    image_count_train = count_images("train")
+    image_count_train_generator_cutoff = image_count_train / BATCH_SIZE + 1
 
-train_labels = []
-for _, labels in truncate_generator(label_generator_train, image_count_train_generator_cutoff):
-    train_labels.extend(labels)
-train_labels = np.array(train_labels[:image_count_train])
+    train_labels = []
+    for _, labels in truncate_generator(label_generator_train, image_count_train_generator_cutoff):
+        train_labels.extend(labels)
+    train_labels = np.array(train_labels[:image_count_train])
 
-train_data = gpu_vgg_model.predict_generator(image_generator_train, steps=image_count_train_generator_cutoff)
-train_data = train_data[:image_count_train]
+    train_data = gpu_vgg_model.predict_generator(image_generator_train, steps=image_count_train_generator_cutoff)
+    train_data = train_data[:image_count_train]
 #+END_SRC
 
 Now let’s extract the analogous pair of arrays for our validation data.
 
 #+BEGIN_SRC jupyter
-image_count_valid = count_images("valid")
-image_count_valid_generator_cutoff = image_count_valid / BATCH_SIZE + 1
+    image_count_valid = count_images("valid")
+    image_count_valid_generator_cutoff = image_count_valid / BATCH_SIZE + 1
 
-image_generator_valid = make_generator("valid", data_gen_args={"preprocessing_function": preprocess_input},
-                                       data_flow_args={"batch_size": BATCH_SIZE, "class_mode": None, "shuffle": False})
-label_generator_valid = make_generator("valid", data_gen_args={}, data_flow_args={"batch_size": BATCH_SIZE, "shuffle": False})
+    image_generator_valid = make_generator("valid", data_gen_args={"preprocessing_function": preprocess_input},
+                                           data_flow_args={"batch_size": BATCH_SIZE, "class_mode": None, "shuffle": False})
+    label_generator_valid = make_generator("valid", data_gen_args={}, data_flow_args={"batch_size": BATCH_SIZE, "shuffle": False})
 
-valid_labels = []
-for _, labels in truncate_generator(label_generator_valid, image_count_valid_generator_cutoff):
-    valid_labels.extend(labels)
-valid_labels = np.array(valid_labels[:image_count_valid])
+    valid_labels = []
+    for _, labels in truncate_generator(label_generator_valid, image_count_valid_generator_cutoff):
+        valid_labels.extend(labels)
+    valid_labels = np.array(valid_labels[:image_count_valid])
 
-valid_data = gpu_vgg_model.predict_generator(image_generator_valid, steps=image_count_valid_generator_cutoff)
-valid_data = valid_data[:image_count_valid]
+    valid_data = gpu_vgg_model.predict_generator(image_generator_valid, steps=image_count_valid_generator_cutoff)
+    valid_data = valid_data[:image_count_valid]
 #+END_SRC
 
 Now we have our training and validation arrays, but they are in non-random order.  Before we can train our final neural network we must randomize them, being careful to preserve the pairwise correlation between features and labels .
 
 #+BEGIN_SRC jupyter
-  train_random_index = np.arange(train_data.shape[0])
-  np.random.shuffle(train_random_index)
-  train_data = train_data[train_random_index]
-  train_labels = train_labels[train_random_index]
+    train_random_index = np.arange(train_data.shape[0])
+    np.random.shuffle(train_random_index)
+    train_data = train_data[train_random_index]
+    train_labels = train_labels[train_random_index]
 
-  valid_random_index = np.arange(valid_data.shape[0])
-  np.random.shuffle(valid_random_index)
-  valid_data = valid_data[valid_random_index]
-  valid_labels = valid_labels[valid_random_index]
+    valid_random_index = np.arange(valid_data.shape[0])
+    np.random.shuffle(valid_random_index)
+    valid_data = valid_data[valid_random_index]
+    valid_labels = valid_labels[valid_random_index]
 #+END_SRC
 
 ***** Train the Network
 We’ll build our model in a CPU environment but compile it for a GPU environment.  Because our classes are relatively balanced in terms of number of images, we’ll use categorical crossentropy as our loss and classification accuracy as our metric.
 
 #+BEGIN_SRC jupyter
-from keras.models import Sequential
-from keras.optimizers import Adam
-from keras.layers import Dropout, Flatten, Dense
+    from keras.models import Sequential
+    from keras.optimizers import Adam
+    from keras.layers import Dropout, Flatten, Dense
 
-LEARNING_RATE = 0.0001
-NUM_CHARACTERS = len(os.listdir(os.path.join(DATA_DIR, "train", "images")))
+    LEARNING_RATE = 0.0001
+    NUM_CHARACTERS = len(os.listdir(os.path.join(DATA_DIR, "train", "images")))
 
-def build_model(input_shape, target_num=NUM_CHARACTERS, hidden_width=128, hidden_depth=1, dropout_rate=0.2):
-    with tf.device("/cpu:0"):
-        model = Sequential()
-        model.add(Flatten(input_shape=input_shape))
-        for _ in range(hidden_depth):
-            model.add(Dense(hidden_width, activation='relu', kernel_initializer='lecun_uniform'))
-            model.add(Dropout(dropout_rate))
-        model.add(Dense(target_num, activation='softmax'))
+    def build_model(input_shape, target_num=NUM_CHARACTERS, hidden_width=128, hidden_depth=1, dropout_rate=0.2):
+        with tf.device("/cpu:0"):
+            model = Sequential()
+            model.add(Flatten(input_shape=input_shape))
+            for _ in range(hidden_depth):
+                model.add(Dense(hidden_width, activation='relu', kernel_initializer='lecun_uniform'))
+                model.add(Dropout(dropout_rate))
+            model.add(Dense(target_num, activation='softmax'))
 
-    return model
+        return model
 
-def compile_model(model, learning_rate=LEARNING_RATE):
-    model = gpuify_model_maybe(model)
-    model.compile(optimizer=Adam(lr=learning_rate), loss='categorical_crossentropy', metrics=['accuracy'])
+    def compile_model(model, learning_rate=LEARNING_RATE):
+        model = gpuify_model_maybe(model)
+        model.compile(optimizer=Adam(lr=learning_rate), loss='categorical_crossentropy', metrics=['accuracy'])
 
-    return model
+        return model
 #+END_SRC
 
 #+RESULTS:
@@ -3181,17 +3185,17 @@ def compile_model(model, learning_rate=LEARNING_RATE):
 The following callbacks will, first, ensure early stopping in case of a bad model, and, second, improve learning as the model reaches diminishing returns.
 
 #+BEGIN_SRC jupyter
-from keras.callbacks import EarlyStopping, ReduceLROnPlateau
+    from keras.callbacks import EarlyStopping, ReduceLROnPlateau
 
-stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=3, verbose=0, mode='auto')
-reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.00001)
+    stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, patience=3, verbose=0, mode='auto')
+    reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=2, min_lr=0.00001)
 #+END_SRC
 
 Let’s visualize our model as a quick sanity check.
 
 #+BEGIN_SRC jupyter :exports both
-template_model = build_model(train_data.shape[1:], hidden_width=512, hidden_depth=3, dropout_rate=0.2)
-template_model.summary()
+    template_model = build_model(train_data.shape[1:], hidden_width=512, hidden_depth=3, dropout_rate=0.2)
+    template_model.summary()
 #+END_SRC
 
 #+RESULTS:
@@ -3224,28 +3228,28 @@ _________________________________________________________________
 Finally!  Time to train!
 
 #+BEGIN_SRC jupyter
-compiled_model = compile_model(template_model)
+    compiled_model = compile_model(template_model)
 
-training_history = compiled_model.fit(train_data, train_labels,
-                                      epochs=15,
-                                      batch_size=BATCH_SIZE,
-                                      validation_data=(valid_data, valid_labels),
-                                      callbacks=[stop_on_val_loss, reduce_lr])
+    training_history = compiled_model.fit(train_data, train_labels,
+                                          epochs=15,
+                                          batch_size=BATCH_SIZE,
+                                          validation_data=(valid_data, valid_labels),
+                                          callbacks=[stop_on_val_loss, reduce_lr])
 #+END_SRC
 
-Due to a bug in Keras, we cannot directly save the weights and structure of a model compiled for multiple GPUs.  However, the multi-GPU model object shares both structure *and* weights with the template model object, which we can save to disk.
+Due to a bug in Keras, we cannot directly save the weights and structure of a model compiled for multiple GPUs.  However, the multi-GPU model object shares both structure and weights with the template model object, which we can save to disk.
 
 Before we save the =template_model=, however, we must remember that it is not yet useable for testing / production.  It expects an array of VGG16 features, but in testing we will provide new images.  So now we’ll stack the =template_model= on top of the =template_vgg_model= and save the result to disk.
 
 #+BEGIN_SRC jupyter
-from keras.models import Model
-import datetime
+    from keras.models import Model
+    import datetime
 
-output_layer = template_vgg_model.output
-for layer in template_model.layers:
-    output_layer = layer(output_layer)
-full_model = Model(inputs=template_vgg_model.input, outputs=output_layer)
-full_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + "-model.h5"))
+    output_layer = template_vgg_model.output
+    for layer in template_model.layers:
+        output_layer = layer(output_layer)
+    full_model = Model(inputs=template_vgg_model.input, outputs=output_layer)
+    full_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + "-model.h5"))
 #+END_SRC
 
 ***** Test the Network
@@ -3253,86 +3257,165 @@ full_model.save(os.path.join(DATA_DIR, datetime.datetime.today().strftime('%Y-%m
 To compare true classification labels with the predictions our model emits, we’ll need to iterate twice over our test images in deterministic order.  One pass will run the images through the model to produce predicted labels, and the other will collect the true labels for the images.
 
 #+BEGIN_SRC jupyter
-image_count_test = count_images("test")
-image_count_test_generator_cutoff = image_count_test / BATCH_SIZE + 1
+    image_count_test = count_images("test")
+    image_count_test_generator_cutoff = image_count_test / BATCH_SIZE + 1
 
-image_generator_test = make_generator("test", data_gen_args={"preprocessing_function": preprocess_input},
-    data_flow_args={"batch_size": BATCH_SIZE, "class_mode": None, "shuffle": False})
-label_generator_test = make_generator("test", data_gen_args={}, data_flow_args={"batch_size": BATCH_SIZE, "shuffle": False})
+    image_generator_test = make_generator("test", data_gen_args={"preprocessing_function": preprocess_input},
+        data_flow_args={"batch_size": BATCH_SIZE, "class_mode": None, "shuffle": False})
+    label_generator_test = make_generator("test", data_gen_args={}, data_flow_args={"batch_size": BATCH_SIZE, "shuffle": False})
 #+END_SRC
 
 #+BEGIN_SRC jupyter
-true_labels = []
-for _, labels in truncate_generator(label_generator_test, image_count_test_generator_cutoff):
-    true_labels.extend(labels)
-true_labels = np.array(true_labels[:image_count_test])
-true_classes = true_labels.argmax(1)
+    true_labels = []
+    for _, labels in truncate_generator(label_generator_test, image_count_test_generator_cutoff):
+        true_labels.extend(labels)
+    true_labels = np.array(true_labels[:image_count_test])
+    true_classes = true_labels.argmax(1)
 #+END_SRC
 
 #+BEGIN_SRC jupyter
-pred_labels = full_model.predict_generator(image_generator_test, steps=image_count_test_generator_cutoff)
-pred_labels = pred_labels[:image_count_test]
-pred_classes = pred_labels.argmax(1)
+    pred_labels = full_model.predict_generator(image_generator_test, steps=image_count_test_generator_cutoff)
+    pred_labels = pred_labels[:image_count_test]
+    pred_classes = pred_labels.argmax(1)
 #+END_SRC
 
 #+BEGIN_SRC jupyter
-from sklearn.metrics import confusion_matrix
+    from sklearn.metrics import confusion_matrix
 
-c_matrix = confusion_matrix(true_classes, pred_classes)
+    c_matrix = confusion_matrix(true_classes, pred_classes)
 #+END_SRC
 
 #+BEGIN_SRC jupyter
-import itertools
+    import itertools
 
-def plot_confusion_matrix(matrix, classes, normalize=False, title='Confusion matrix', cmap=plt.cm.Blues):
-    """
-    This function prints and plots the confusion matrix.
-    Normalization can be applied by setting `normalize=True`.
-    """
-    if normalize:
-        matrix = matrix.astype('float') / matrix.sum(axis=1)[:, np.newaxis]
+    def plot_confusion_matrix(matrix, classes, normalize=False, title='Confusion matrix', cmap=plt.cm.Blues):
+        """
+        This function prints and plots the confusion matrix.
+        Normalization can be applied by setting `normalize=True`.
+        """
+        if normalize:
+            matrix = matrix.astype('float') / matrix.sum(axis=1)[:, np.newaxis]
 
-    plt.imshow(matrix, interpolation='nearest', cmap=cmap)
-    plt.title(title)
-    plt.colorbar()
-    tick_marks = np.arange(len(classes))
-    plt.xticks(tick_marks, classes, rotation=45)
-    plt.yticks(tick_marks, classes)
+        plt.imshow(matrix, interpolation='nearest', cmap=cmap)
+        plt.title(title)
+        plt.colorbar()
+        tick_marks = np.arange(len(classes))
+        plt.xticks(tick_marks, classes, rotation=45)
+        plt.yticks(tick_marks, classes)
 
-    fmt = '.2f' if normalize else 'd'
-    thresh = matrix.max() / 2.
-    for i, j in itertools.product(range(matrix.shape[0]), range(matrix.shape[1])):
-        plt.text(j, i, format(matrix[i, j], fmt),
-                 horizontalalignment="center",
-                 color="white" if matrix[i, j] > thresh else "black")
+        fmt = '.2f' if normalize else 'd'
+        thresh = matrix.max() / 2.
+        for i, j in itertools.product(range(matrix.shape[0]), range(matrix.shape[1])):
+            plt.text(j, i, format(matrix[i, j], fmt),
+                     horizontalalignment="center",
+                     color="white" if matrix[i, j] > thresh else "black")
 
-    plt.tight_layout()
-    plt.ylabel('True label')
-    plt.xlabel('Predicted label')
+        plt.tight_layout()
+        plt.ylabel('True label')
+        plt.xlabel('Predicted label')
 #+END_SRC
 
 By default our class labels are encoded as integers, but we can find the actual class names as taken from the folder hierarchy if we know where to look.
 
 #+BEGIN_SRC jupyter 
-class_names = [c for c, i in sorted(label_generator_test.class_indices.items(), key=lambda pair: pair[1])]
+    class_names = [c for c, i in sorted(label_generator_test.class_indices.items(), key=lambda pair: pair[1])]
 #+END_SRC
 
 Now we can visualize our accuracy!
 
 #+NAME: confusion_matrix
-#+BEGIN_SRC jupyter
-plot_confusion_matrix(c_matrix, class_names, normalize=True)
+#+BEGIN_SRC jupyter :results file :eval never
+    plot_confusion_matrix(c_matrix, class_names, normalize=True)
 #+END_SRC
 
 #+ATTR_ORG: :width 600
 #+RESULTS: confusion_matrix
 [[file:jupyter_images/confusion_matrix.png]]
 
-**** TODO Data Generation
-Talk about your code here
-
-***** Installation
-
-***** Usage
-
 **** TODO Discussion
+Far and away, the most time and effort went into generating the images, ensuring the data generation process was repeatable.  Over 99%.
+
+From testing, this much data really is necessary to get above 95% accuracy.  Perhaps because we’re not doing data augmentation?  Because we’re doing the feature-extraction-first trick.
+
+Maybe could have gotten away with a simpler network?
+
+Next steps.  Localization!  Pose recognition (sorta, really just want to identify which of finitely many moves)!
+
+**** Appendix - Data Generation
+:PROPERTIES:
+:CUSTOM_ID:       BA2C6694-B88E-431B-905B-CC13917C214A
+:END:
+For interested parties, the following describes the code to generate the custom images.  Not all the code will be covered, in particular I assume the reader is familiar with [[https://www.gnu.org/software/make/manual/make.html][GNU Make]] and can read the [[file:Makefile][Makefile]] included in this repository.
+
+The images were generated with the [[https://dolphin-emu.org/][Dolphin emulator]] and [[https://www.ffmpeg.org/][ffmpeg]] on an early 2014 Macbook Air with a stock Intel HD Graphics 5000 graphics card.
+
+***** Install Dolphin
+Dolphin 5.0 or higher is required.  You can [[https://dolphin-emu.org/download/][download]] and install the software from the Dolphin website, or follow the [[https://wiki.dolphin-emu.org/index.php?title=Installing_Dolphin][Dolphin wiki directions]] to install Dolphin via the package manager of your choice.
+
+Before you can generate images with Dolphin you’ll need to place a copy of the Super Smash Bros. Melee v1.02 ISO in the [[file:scripts/record_avi/][scripts/record_avi directory]].  It is my understanding that possession of a digital copy of this ISO file does not violate copyright law provided you also own a physical copy of the disc, however I am not a lawyer.  I do not recommend breaking the law in order to recreate this analysis.
+
+Before you run any image generation code you will also need to configure Dolphin for automation:\\
+\\
+- Pause at the end of recording ::
+  - Ensure “Pause at End of Movie” under the “Movie” menu is checked.
+- Don’t prompt for confirmation before closing Dolphin ::
+  - Select “Configure…” under the “Dolphin” menu.
+  - Ensure “Confirm on Stop” under the “Interface” tab is unchecked.
+- Enable Melee Debug Menu ::
+  - Select “Configure…” under the “Dolphin” menu.
+  - Ensure “Enable Cheats” under the “General” tab is checked.
+  - Click the “OK” button.
+  - Open the Melee ISO and select “Cheat Manager” under the “Tools” menu.
+  - Ensure “Debug Menu” under the “AR Codes” tab is checked.
+  - Click the “Apply” button.\\
+\\
+Once you have configured Dolphin, close the program.  Find your default user directory and copy it into the =scripts/record_avi= directory.  Rename the copied directory to =dolphin_user= if it is not already so named.
+
+***** Make Images and Masks
+From the command line execute =make= with no arguments to see a detailed usage message, including the documentation of configuration variables.
+
+The images for this analysis were generated with the following commands:\\
+\\
+=$ make dirs=\\
+=$ make images=\\
+=$ make hist=\\
+=$ make masks=
+
+Note that proper mask generation requires recording a mask video that is frame-for-frame synchronized with a corresponding image video, and thus Dolphin must run at the same CPU speed during both image and mask video recording.  For this reason I recorded all videos on my laptop, as I could not force EC2 instances to run at any constant speed.
+
+**** Appendix - Data Preprocessing
+The following describes the code to preprocess previously generated images for keras modeling.  As with the [[#BA2C6694-B88E-431B-905B-CC13917C214A][data generation]] documentation, not all code will be covered.
+
+Image preprocessing and keras modeling took place on an [[https://aws.amazon.com/ec2/instance-types/p2/][EC2 P2]] instance.
+
+***** Set up AWS
+Initialize an instance running the [[https://aws.amazon.com/marketplace/pp/B077GCZ4GR][Deep Learning Base AMI (Ubuntu)]].  I used Ubuntu 16.04 LTS and Python 3 for my data processing.  All required packages are listed in the [[file:ubuntu-packages.txt][ubuntu-packages.txt]] and [[file:requirements.txt][requirements.txt]] files.
+
+To get ready for data processing, clone this repository onto your instance and execute the following commands from the cloned directory.\\
+\\
+=$ sudo add-apt-repository ppa:dolphin-emu/ppa -y=\\
+=$ sudo apt update=\\
+=$ xargs -a ubuntu-packages.txt sudo apt install -y=\\
+=$ pip3 install -r requirements.txt --user=\\
+=$ touch scripts/record_avi/Super_Smash_Bros._Melee_\(v1.02\).iso=
+
+I wish I could provide a docker instance for the complete setup, however the final setup must have access to the machine GPU and I have been unable to find a GPU-capable deep learning docker setup that does not require more effort than the simple commands above.
+
+Note that you must create a fake ISO with =touch=.  The Makefile rules expect a file with this name, however as long as you are not doing any video recording you don’t need an actual copy of the real ISO.
+
+***** Split Data into Train/Test/Valid
+From the cloned repository directory, run =make dirs= to set up the necessary data directory structure.
+
+If you generated image and mask data according to [[#BA2C6694-B88E-431B-905B-CC13917C214A][the documentation]] above, copy all images into the =data/images= subfolder and copy all masks into the =data/masks= subfolder.\\
+\\
+If, instead of generating image and mask data, you would like to download what was used in this analysis, execute the following commands from the cloned repository directory.\\
+\\
+=$ curl -O https://s3.amazonaws.com/datasci-smash/jpg-data.tar.gz=\\
+=$ tar -xzf jpg-data.tar.gz=\\
+=$ find data -name '*jpg' -execdir touch '{}' +=
+
+Note that you must =touch= all the downloaded image and mask data to let Make know that the images are up-to-date and do not need to be refreshed by video recording.
+
+Finally, run =make keras= to create shuffled train/test/valid image data in the =keras/train=, =keras/test=, and =keras/valid= folders.\\
+\\
+You may set the Make variables =KERAS_RAND_SEED=, =KERAS_TRAIN_PCT=, =KERAS_TEST_PCT=, and =KERAS_VALID_PCT= to control the shuffling and splitting steps.
