--- a/smash.ipynb
+++ b/smash.ipynb
@@ -4,6 +4,35 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Classification of Characters in Super Smash Bros. Melee\n",
+        "-----"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- [Executive Summary](#Executive-Summary)\n",
+        "- [What is Transfer Learning?](#What-is-Transfer-Learning?)\n",
+        "- [Transfer Learning Code](#Transfer-Learning-Code)\n",
+        " - [Review the Data](#Review-the-Data)\n",
+        " - [Extract Features](#Extract-Features)\n",
+        " - [Train the Network](#Train-the-Network)\n",
+        " - [Test the Network](#Test-the-Network)\n",
+        "- [Appendix - Data Generation](#Appendix---Data-Generation)\n",
+        " - [Install Dolphin](#Install-Dolphin)\n",
+        " - [Make Images and Masks](#Make-Images-and-Masks)\n",
+        "- [Appendix - Data Preprocessing](#Appendix---Data-Preproces",
+        "sing)\n",
+        " - [Set up AWS](#Set-up-AWS)\n",
+        " - [Split Data into Train/Test/Valid](#Split-Data-into-Train",
+        "/Test/Valid)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Note: **I am a data scientist in the Bay Area!  Feel free to",
         " contact me with questions, concerns, offers for work ;)**"
       ]
@@ -23,7 +52,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Classification of Characters in Super Smash Bros. Melee"
+        "# Executive Summary"
       ]
     },
     {
@@ -58,7 +87,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## What is Transfer Learning?"
+        "# What is Transfer Learning?"
       ]
     },
     {
@@ -136,14 +165,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Transfer Learning Code"
+        "# Transfer Learning Code"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Review the Data"
+        "## Review the Data"
       ]
     },
     {
@@ -253,8 +282,8 @@
       "metadata": {},
       "source": [
         "These images were all captured from scripted gameplay.  The ",
-        "Data Generation section includes technical details on the ca",
-        "pturing process.  \n",
+        "[Data Generation](#Data-Generation) section includes technic",
+        "al details on the capturing process.  \n",
         "  \n",
         "Compare these images against the images used in the ImageNet",
         " competition to train VGG16.  E.g. [these images from the pe",
@@ -303,7 +332,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Extract Features"
+        "## Extract Features"
       ]
     },
     {
@@ -617,7 +646,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Train the Network"
+        "## Train the Network"
       ]
     },
     {
@@ -779,7 +808,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Test the Network"
+        "## Test the Network"
       ]
     },
     {
@@ -928,7 +957,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Appendix - Data Generation"
+        "<a id='Data-Generation'></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Appendix - Data Generation"
       ]
     },
     {
@@ -957,7 +993,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Install Dolphin"
+        "## Install Dolphin"
       ]
     },
     {
@@ -1021,7 +1057,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Make Images and Masks"
+        "## Make Images and Masks"
       ]
     },
     {
@@ -1062,7 +1098,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Appendix - Data Preprocessing"
+        "# Appendix - Data Preprocessing"
       ]
     },
     {
@@ -1070,8 +1106,9 @@
       "metadata": {},
       "source": [
         "The following describes the code to preprocess previously ge",
-        "nerated images for keras modeling.  As with the data generat",
-        "ion documentation, not all code will be covered."
+        "nerated images for keras modeling.  As with the [data genera",
+        "tion](#Data-Generation) documentation, not all code will be ",
+        "covered."
       ]
     },
     {
@@ -1087,7 +1124,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Set up AWS"
+        "## Set up AWS"
       ]
     },
     {
@@ -1143,7 +1180,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Split Data into Train/Test/Valid"
+        "## Split Data into Train/Test/Valid"
       ]
     },
     {
@@ -1158,9 +1195,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "If you generated image and mask data according to the docume",
-        "ntation above, copy all images into the `data/images` subfol",
-        "der and copy all masks into the `data/masks` subfolder.  \n",
+        "If you generated image and mask data according to [the docum",
+        "entation](#Data-Generation) above, copy all images into the ",
+        "`data/images` subfolder and copy all masks into the `data/ma",
+        "sks` subfolder.  \n",
         "  \n",
         "If, instead of generating image and mask data, you would lik",
         "e to download what was used in this analysis, execute the fo",
